RESOLVED FIXED97423
REGRESSION(r128239): Mutable ElementAttributeData leak their Attribute vectors.
https://bugs.webkit.org/show_bug.cgi?id=97423
Summary REGRESSION(r128239): Mutable ElementAttributeData leak their Attribute vectors.
Andreas Kling
Reported 2012-09-23 19:53:35 PDT
Patch forthcoming.
Attachments
Patch (2.32 KB, patch)
2012-09-23 19:54 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2012-09-23 19:54:58 PDT
WebKit Review Bot
Comment 2 2012-09-23 20:33:39 PDT
Comment on attachment 165302 [details] Patch Clearing flags on attachment: 165302 Committed r129323: <http://trac.webkit.org/changeset/129323>
WebKit Review Bot
Comment 3 2012-09-23 20:33:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.