REGRESSION(r128239): Mutable ElementAttributeData leak their Attribute vectors. <http://webkit.org/b/97423>

Reviewed by Anders Carlsson.

r128239 added a WTF::deleteOwnedPtr() override for ElementAttributeData*, but ElementAttributeData is
a ref-counted object. Fixed this by overriding deref() instead to call the appropriate subclass destructor.

* dom/ElementAttributeData.h:
(WebCore::ElementAttributeData::deref):


Canonical link: https://commits.webkit.org/115360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129323 268f45cc-cd09-0410-ab3c-d52691b4dbfc